// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lint-format > sku format > errors are fixed: fixableLintError.ts 1`] = `
const foo = () => 'foo';

`;

exports[`lint-format > sku format > errors are fixed: importOrder1.ts 1`] = `
import './reset'; // side-effect imports should stay put

import path from 'path'; //  built-in

import someModule from 'some-module'; // external

import utils from 'src/utils'; // internal

import distantParent from '../../../parent'; // parents
import Parent from '../parent'; // parents

import LocalComponent from './LocalComponent'; // sibling

import myself from '.'; // index

import vanillaStyles from './vanillaStyles.css'; // styles

`;

exports[`lint-format > sku format > errors are fixed: importOrder2.ts 1`] = `
import c from '../c';

import a from './a';
import b from './b';

import aStyle from './a.css';
import bStyle from './b.css';
import cStyle from '../c.css';

`;

exports[`lint-format > sku format > errors are fixed: unformattedFile2.ts 1`] = `
import { something } from 'with-double-quotes';

const indented = 'indented';

const foo = [
  'something "really" long',
  'that has to be moved',
  'to multiple lines',
  "so we can 'test' trailing commas",
];

`;

exports[`lint-format > sku lint > lint errors are reported: typescriptFile.ts 1`] = `
stdout: Linting
Checking code with TypeScript compiler
src/importOrder1.ts(3,28): error TS2307: Cannot find module './LocalComponent' or its corresponding type declarations.
src/importOrder1.ts(4,20): error TS2307: Cannot find module '../parent' or its corresponding type declarations.
src/importOrder1.ts(5,24): error TS2307: Cannot find module 'some-module' or its corresponding type declarations.
src/importOrder1.ts(6,27): error TS2307: Cannot find module './vanillaStyles.css' or its corresponding type declarations.
src/importOrder1.ts(7,27): error TS2307: Cannot find module '../../../parent' or its corresponding type declarations.
src/importOrder1.ts(8,20): error TS2307: Cannot find module '.' or its corresponding type declarations.
src/importOrder1.ts(10,19): error TS2307: Cannot find module 'src/utils' or its corresponding type declarations.
src/importOrder2.ts(1,20): error TS2307: Cannot find module './a.css' or its corresponding type declarations.
src/importOrder2.ts(2,20): error TS2307: Cannot find module './b.css' or its corresponding type declarations.
src/importOrder2.ts(3,20): error TS2307: Cannot find module '../c.css' or its corresponding type declarations.
src/importOrder2.ts(5,15): error TS2307: Cannot find module './b' or its corresponding type declarations.
src/importOrder2.ts(6,15): error TS2307: Cannot find module './a' or its corresponding type declarations.
src/importOrder2.ts(7,15): error TS2307: Cannot find module '../c' or its corresponding type declarations.
src/typescriptFile.ts(1,7): error TS2322: Type 'string' is not assignable to type 'number'.
src/utils.test.ts(3,1): error TS2582: Cannot find name 'it'. Do you need to install type definitions for a test runner? Try \`npm i --save-dev @types/jest\` or \`npm i --save-dev @types/mocha\`.
src/utils.test.ts(6,3): error TS2304: Cannot find name 'expect'.
`;

exports[`lint-format > sku lint > lint errors are reported: unformattedFile1.js 1`] = `
stdout: Linting
Checking code with TypeScript compiler
src/importOrder1.ts(3,28): error TS2307: Cannot find module './LocalComponent' or its corresponding type declarations.
src/importOrder1.ts(4,20): error TS2307: Cannot find module '../parent' or its corresponding type declarations.
src/importOrder1.ts(5,24): error TS2307: Cannot find module 'some-module' or its corresponding type declarations.
src/importOrder1.ts(6,27): error TS2307: Cannot find module './vanillaStyles.css' or its corresponding type declarations.
src/importOrder1.ts(7,27): error TS2307: Cannot find module '../../../parent' or its corresponding type declarations.
src/importOrder1.ts(8,20): error TS2307: Cannot find module '.' or its corresponding type declarations.
src/importOrder1.ts(10,19): error TS2307: Cannot find module 'src/utils' or its corresponding type declarations.
src/importOrder2.ts(1,20): error TS2307: Cannot find module './a.css' or its corresponding type declarations.
src/importOrder2.ts(2,20): error TS2307: Cannot find module './b.css' or its corresponding type declarations.
src/importOrder2.ts(3,20): error TS2307: Cannot find module '../c.css' or its corresponding type declarations.
src/importOrder2.ts(5,15): error TS2307: Cannot find module './b' or its corresponding type declarations.
src/importOrder2.ts(6,15): error TS2307: Cannot find module './a' or its corresponding type declarations.
src/importOrder2.ts(7,15): error TS2307: Cannot find module '../c' or its corresponding type declarations.
src/typescriptFile.ts(1,7): error TS2322: Type 'string' is not assignable to type 'number'.
src/utils.test.ts(3,1): error TS2582: Cannot find name 'it'. Do you need to install type definitions for a test runner? Try \`npm i --save-dev @types/jest\` or \`npm i --save-dev @types/mocha\`.
src/utils.test.ts(6,3): error TS2304: Cannot find name 'expect'.
`;

exports[`lint-format > sku lint > lint errors are reported: utils.test.ts 1`] = `
stdout: Linting
Checking code with TypeScript compiler
src/importOrder1.ts(3,28): error TS2307: Cannot find module './LocalComponent' or its corresponding type declarations.
src/importOrder1.ts(4,20): error TS2307: Cannot find module '../parent' or its corresponding type declarations.
src/importOrder1.ts(5,24): error TS2307: Cannot find module 'some-module' or its corresponding type declarations.
src/importOrder1.ts(6,27): error TS2307: Cannot find module './vanillaStyles.css' or its corresponding type declarations.
src/importOrder1.ts(7,27): error TS2307: Cannot find module '../../../parent' or its corresponding type declarations.
src/importOrder1.ts(8,20): error TS2307: Cannot find module '.' or its corresponding type declarations.
src/importOrder1.ts(10,19): error TS2307: Cannot find module 'src/utils' or its corresponding type declarations.
src/importOrder2.ts(1,20): error TS2307: Cannot find module './a.css' or its corresponding type declarations.
src/importOrder2.ts(2,20): error TS2307: Cannot find module './b.css' or its corresponding type declarations.
src/importOrder2.ts(3,20): error TS2307: Cannot find module '../c.css' or its corresponding type declarations.
src/importOrder2.ts(5,15): error TS2307: Cannot find module './b' or its corresponding type declarations.
src/importOrder2.ts(6,15): error TS2307: Cannot find module './a' or its corresponding type declarations.
src/importOrder2.ts(7,15): error TS2307: Cannot find module '../c' or its corresponding type declarations.
src/typescriptFile.ts(1,7): error TS2322: Type 'string' is not assignable to type 'number'.
src/utils.test.ts(3,1): error TS2582: Cannot find name 'it'. Do you need to install type definitions for a test runner? Try \`npm i --save-dev @types/jest\` or \`npm i --save-dev @types/mocha\`.
src/utils.test.ts(6,3): error TS2304: Cannot find name 'expect'.
`;

exports[`sku format > errors are fixed: fixableLintError.ts 1`] = `
const foo = () => 'foo';

`;

exports[`sku format > errors are fixed: importOrder1.ts 1`] = `
import './reset'; // side-effect imports should stay put

import path from 'path'; //  built-in

import someModule from 'some-module'; // external

import utils from 'src/utils'; // internal

import distantParent from '../../../parent'; // parents
import Parent from '../parent'; // parents

import LocalComponent from './LocalComponent'; // sibling

import myself from '.'; // index

import vanillaStyles from './vanillaStyles.css'; // styles

`;

exports[`sku format > errors are fixed: importOrder2.ts 1`] = `
import c from '../c';

import a from './a';
import b from './b';

import aStyle from './a.css';
import bStyle from './b.css';
import cStyle from '../c.css';

`;

exports[`sku format > errors are fixed: unformattedFile2.ts 1`] = `
import { something } from 'with-double-quotes';

const indented = 'indented';

const foo = [
  'something "really" long',
  'that has to be moved',
  'to multiple lines',
  "so we can 'test' trailing commas",
];

`;

exports[`sku lint > lint errors are reported: typescriptFile.ts 1`] = `
stdout: Linting
Checking code with TypeScript compiler
src/typescriptFile.ts(1,7): error TS2322: Type 'string' is not assignable to type 'number'.
`;

exports[`sku lint > lint errors are reported: unformattedFile1.js 1`] = `
stdout: Linting
Checking code with TypeScript compiler
Checking code with Prettier
Paths: .
src/unformattedFile1.js
To fix this issue, run 'pnpm run format'
`;

exports[`sku lint > lint errors are reported: utils.test.ts 1`] = `
stdout: Linting
Checking code with TypeScript compiler
Checking code with Prettier
Paths: .
Checking code with ESLint
Paths: .

1:1  error  Unexpected console statement                    no-console
3:4  error  Unexpected focused test                         jest/no-focused-tests
4:7  error  'foo' is never reassigned. Use 'const' instead  prefer-const

✖ 3 problems (3 errors, 0 warnings)
1 error and 0 warnings potentially fixable with the \`--fix\` option.
`;
